# verbose-barnacle

./: README.md  clean.sh  main.py  pyproject.toml  test_run.py
components/: log.py
components/plot/: matplotlib.py
components/serial/: __init__.py  connect.py
src/components/serial/: command.py
src/qtcomponents/: __init__.py  error.py  file.py  log.py  table.py
src/qtcomponents/plot/: __init__.py  lib.py  matplotlib.py  timeseries.py
src/qtcomponents/serial/: __init__.py  command.py  connect.py
src/qtcomponents/view/: __init__.py  component.py  graphicsview.py  image.py  lib.py  scene.py
test/: lib.py  test_image_widget.py
