[project]
name = "qtcomponents"
version = "0.1.3"
description = "Common component library for PySide6"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "proximalf", email = "proximalfuture@gmail.com"}]
dependencies = [
    "matplotlib>=3.10.6",
    "pyserial>=3.5",
    "pyside6>=6.9.2",
]
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]
